0032955: Draw Harness, ViewerTest - extend vcolorconvert command to print color in hex format